--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 <body>
     <div class="topnav">
         <a href="#home" class="logo">arc90</a>
-        <a href="#blog">Blog</a>
+        <a href="blogpage.html">Blog</a>
         <a href="#my work" class="my-works-button">My Works</a>
-        <a href="#linkedin">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/aryan-kumar-029abb289?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a>
         <a href="#discord">Discord</a>
     </div>
 
