--- a/index.html
+++ b/index.html
@@ -67,7 +67,20 @@
 
        .topnav a:hover {
             transform: scale(1.1);
-        }      
+        }
+        
+        .dropbtn {
+            background-color: #333; /* Button color */
+         color: #fff; /* Text color */
+         padding: 10px 0px;
+         border-radius: 5px;
+         text-decoration: none;
+         border: none; /* Remove button border */
+         box-shadow: none; /* Remove button shadow */
+         font-size: 24px; /* Keep this to make lines thicker */
+         line-height: 1; /* Reset line height to make lines longer */
+         width: 40px; /* Increase width to make lines longer */
+        }
 
        .dropdown {
             position: relative;
@@ -93,7 +106,7 @@
         }
 
        .dropdown-content a:hover {
-            background-color: #555;
+            background-color:  #f2f2f2;
         }
 
        .show {
@@ -102,8 +115,8 @@
 
        .dropdown-container {
             position: absolute;
-            right: 0px;
-            top: 7px
+            right: 10px;
+            top: -5px
         }
 
         @media (max-width: 768px) {
@@ -112,7 +125,7 @@
     position: absolute;
     background-color: #fff;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 0px 0px 0px rgba(251, 251, 251, 0.2);
     z-index: 1;
     left: -100px; /* Adjust this value as needed */
             }
