--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             background-attachment: fixed;
         }
 
+        .logo {
+        font-size: 24px;
+        }
+
        .topnav {
             overflow: hidden;
             background-color: #333;
