--- a/blogpage.html
+++ b/blogpage.html
@@ -34,7 +34,7 @@
 
        .topnav.logo {
             font-weight: bold;
-            font-size: 24px;
+            font-size: 44px;
         }
 
        .topnav a:nth-child(2),
@@ -122,7 +122,7 @@
         }
 
        .dropdown-content a:hover {
-            background-color: #555;
+            background-color: #000;
         }
 
         
@@ -152,7 +152,7 @@
 </head>
 <body>
     <div class="topnav">
-        <a href="index.html" class="logo">arc90</a>
+        <a href="index.html" class="logo" >arc90</a>
         <a href="blogpage.html">Blog</a>
         <a href="#about" class="my-works-button">My Works</a>
         <a href="https://www.linkedin.com/in/aryan-kumar-029abb289?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a>
@@ -163,7 +163,7 @@
             <button class="dropbtn">&#9776;</button>
             <div class="dropdown-content">
                 <a href="#">My Resume</a>
-                <a href="#">My Clicks</a>
+                <a href="pics.html">Pics</a>
                 <a href="#">About Me</a>
             </div>
         </div>
