--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         }
 
        .dropdown-content a:hover {
-            background-color:  #f2f2f2;
+            background-color:  #000;
         }
 
        .show {
@@ -149,7 +149,7 @@
             <button class="dropbtn">&#9776;</button>
             <div class="dropdown-content">
                 <a href="#">My Resume</a>
-                <a href="#">My Clicks</a>
+                <a href="pics.html">pics</a>
                 <a href="#">About Me</a>
             </div>
         </div>
