--- a/blogpage.html
+++ b/blogpage.html
@@ -156,7 +156,7 @@
         <a href="blogpage.html">Blog</a>
         <a href="#about" class="my-works-button">My Works</a>
         <a href="https://www.linkedin.com/in/aryan-kumar-029abb289?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a>
-        <a href="#discord">Discord</a>
+        <a href="spotify.html">Spotify</a>
     </div>
     <div class="dropdown-container">
         <div class="dropdown">
