--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             You might know me as Aryan Kumar, or "that guy from <a href="https://www.geeksforgeeks.org/introduction-to-cyber-physical-system/   "><strong style="color: black;">CPS</strong></a>"
             well..Welcome to my very first website!
             Here you'll get to see more of my technical side
-            and probably we can work on <a href="myworks.html" style="color: black;">projects</a> togeather
+            and probably we can work on <a href="myworks.html" style="color: black;">projects</a> together
             </pre>
         <hr>
         <a href="https://github.com/arc-github01" target="_blank" rel="noopener noreferrer" title="GitHub Profile"> <img src="compicon.png" alt="Company Icon" style="float: right; margin-top: -20px; width: 40%;">
