--- a/index.html
+++ b/index.html
@@ -9,20 +9,27 @@
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
+            transition: background 0.3s;
+        }
+
+        .dark-mode {
+            background-image: none;
+            background-color: #121212;
+            color: #f2f2f2;
         }
 
         .logo {
-        font-size: 24px;
+            font-size: 24px;
         }
 
-       .topnav {
+        .topnav {
             overflow: hidden;
             background-color: #333;
             border-bottom: solid 1px #000;
-            position: relative; /* Added to support absolute positioning of dropdown */
+            position: relative;
         }
 
-       .topnav a {
+        .topnav a {
             float: left;
             display: block;
             color: #f2f2f2;
@@ -32,24 +39,21 @@
             transition: transform 0.2s ease-in-out;
         }
 
-       .topnav.logo {
+        .topnav .logo {
             font-weight: bold;
             font-size: 24px;
         }
 
-       .topnav a:nth-child(2),
-       .topnav a:nth-child(3),
-       .topnav a:nth-child(4),
-       .topnav a:nth-child(5) {
-            margin-left: auto;
+        .topnav a:hover {
+            transform: scale(1.1);
         }
 
-       .main-content {
+        .main-content {
             min-height: 100vh;
             padding: 20px;
         }
 
-       .my-works-button {
+        .my-works-button {
             background-color: #333;
             color: #959595;
             padding: 10px 20px;
@@ -57,51 +61,42 @@
             text-decoration: none;
         }
 
-       .my-works-button:hover {
+        .my-works-button:hover {
             transform: scale(1.05);
         }
 
-        img[src="compicon.png"] {
-            transition: transform 0.3s ease-in-out;
+        .topnav a:nth-child(2),
+        .topnav a:nth-child(3),
+        .topnav a:nth-child(4),
+        .topnav a:nth-child(5) {
+            margin-left: auto;
         }
 
-        img[src="compicon.png"]:hover {
-            transform: scale(1.1);
-        }
-
-       .topnav a:hover {
-            transform: scale(1.1);
-        }
-        
         .dropbtn {
-            background-color: #333; /* Button color */
-         color: #fff; /* Text color */
-         padding: 10px 0px;
-         border-radius: 5px;
-         text-decoration: none;
-         border: none; /* Remove button border */
-         box-shadow: none; /* Remove button shadow */
-         font-size: 24px; /* Keep this to make lines thicker */
-         line-height: 1; /* Reset line height to make lines longer */
-         width: 40px; /* Increase width to make lines longer */
+            background-color: #333;
+            color: #fff;
+            padding: 10px;
+            border: none;
+            font-size: 24px;
+            cursor: pointer;
         }
 
-       .dropdown {
+        .dropdown {
             position: relative;
             display: inline-block;
         }
 
-       .dropdown-content {
+        .dropdown-content {
             display: none;
             position: absolute;
-            right: 0px;
+            right: 0;
             background-color: #fff;
             min-width: 160px;
-            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            box-shadow: 0px 8px 16px 0px rgba(255, 255, 255, 0.2);
             z-index: 1;
         }
 
-       .dropdown-content a {
+        .dropdown-content a {
             color: #fff;
             padding: 12px 16px;
             text-decoration: none;
@@ -109,30 +104,88 @@
             background-color: #333;
         }
 
-       .dropdown-content a:hover {
-            background-color:  #000;
+        .dropdown-content a:hover {
+            background-color: #000;
         }
 
-       .show {
+        .show {
             display: block;
         }
 
-       .dropdown-container {
+        .dropdown-container {
             position: absolute;
             right: 10px;
-            top: -5px
+            top: -5px;
         }
 
         @media (max-width: 768px) {
-          .dropdown-content {
+            .dropdown-content {
                 display: none;
-    position: absolute;
-    background-color: #fff;
-    min-width: 160px;
-    box-shadow: 0px 0px 0px 0px rgba(251, 251, 251, 0.2);
-    z-index: 1;
-    left: -100px; /* Adjust this value as needed */
+                position: absolute;
+                background-color: #fff;
+                min-width: 160px;
+                box-shadow: 0px 0px 0px 0px rgba(251, 251, 251, 0.2);
+                z-index: 1;
+                left: -100px;
             }
+        }
+
+        /* Dark mode styles */
+        .dark-mode .topnav {
+            background-color: #333; /* Keep the topnav background color the same */
+        }
+
+        .dark-mode .dropdown-content a {
+            background-color: #333;
+        }
+
+        .dark-mode .my-works-button {
+            background-color: #333;
+            color: #ffffff;
+        }
+
+        /* Dark mode button styles */
+        label {
+            width: 50px;
+            height: 25px;
+            position: relative;
+            display: block;
+            background: #ebebeb;
+            border-radius: 25px;
+            box-shadow: inset 0px 5px 15px rgba(0,0,0,0.4), inset 0px -5px 15px rgba(255,255,255,0.4);
+            cursor: pointer;
+            transition: 0.3s;
+            margin-left: auto; /* Adjust this value to move the button to the left */
+            margin-right: 100px;
+            margin-top: -7px;
+        }
+
+        label:after {
+            content: "";
+            width: 20px;
+            height: 20px;
+            position: absolute;
+            top: 2.5px;
+            left: 2.5px;
+            background: linear-gradient(180deg,#ffcc89,#d8860b);
+            border-radius: 20px;
+            box-shadow: 0px 5px 10px rgba(0,0,0,0.2);
+            transition: 0.3s;
+        }
+
+        input {
+            width: 0;
+            height: 0;
+            visibility: hidden;
+        }
+
+        input:checked + label {
+            background: #242424;
+        }
+
+        input:checked + label:after {
+            left: 27.5px;
+            background: linear-gradient(180deg,#777,#3a3a3a);
         }
     </style>
 </head>
@@ -143,6 +196,10 @@
         <a href="#my work" class="my-works-button">My Works</a>
         <a href="https://www.linkedin.com/in/aryan-kumar-029abb289?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn</a>
         <a href="spotify.html">Spotify</a>
+        <input type="checkbox" id="darkmode-toggle"/>
+        <label for="darkmode-toggle">
+            
+        </label>
     </div>
     <div class="dropdown-container">
         <div class="dropdown">
@@ -164,10 +221,10 @@
         <hr>
         <pre style="font-size: 36px;">   Hi,</pre>
         <pre style="font-size: 25px;">
-            You might know me as Aryan Kumar, or "that guy from <a href="https://www.geeksforgeeks.org/introduction-to-cyber-physical-system/   "><strong style="color: black;">CPS</strong></a>"
+            You might know me as Aryan Kumar, or "that guy from <a href="https://www.geeksforgeeks.org/introduction-to-cyber-physical-system/"><strong style="color: rgb(131, 131, 131);">CPS</strong></a>"
             well..Welcome to my very first website!
             Here you'll get to see more of my technical side
-            and probably we can work on <a href="myworks.html" style="color: black;">projects</a> together
+            and probably we can work on <a href="myworks.html" style="color: rgb(131, 131, 131);">projects</a> together
             </pre>
         <hr>
         <a href="https://github.com/arc-github01" target="_blank" rel="noopener noreferrer" title="GitHub Profile"> <img src="compicon.png" alt="Company Icon" style="float: right; margin-top: -20px; width: 40%;">
@@ -201,6 +258,11 @@
         const dropdownContent = document.querySelector('.dropdown-content');
         dropdown.addEventListener('click', () => {
             dropdownContent.classList.toggle('show');
+        });
+
+        const darkModeToggle = document.getElementById('darkmode-toggle');
+        darkModeToggle.addEventListener('change', () => {
+            document.body.classList.toggle('dark-mode', darkModeToggle.checked);
         });
     </script>
 </body>
