--- a/spotify.html
+++ b/spotify.html
@@ -195,6 +195,9 @@
             box-shadow: inset 0px 5px 15px rgba(0,0,0,0.4), inset 0px -5px 15px rgba(255,255,255,0.4);
             cursor: pointer;
             transition: 0.3s;
+            margin-left: auto; /* Adjust this value to move the button to the left */
+            margin-right: 100px;
+            margin-top: -55px;
             
         }
 
